--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  http: ^1.1.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
