--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -13,32 +13,17 @@ on:
 
 jobs:
   build:
+    name: run testing
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v1
 
-      - uses: dart-lang/setup-dart@v1
-
-      - uses: subosito/flutter-action@v2
+      - name: install dependencies
+        uses: geowatson/flutter-latest@1.0.0
         with:
-          flutter-version: '3.7.7'
-          channel: 'stable'
-      - run: flutter --version
+          args: pub get
 
-      - name: Install dependencies
-        run: flutter pub get
-
-      # Uncomment this step to verify the use of 'dart format' on each commit.
-      # - name: Verify formatting
-      #   run: dart format --output=none --set-exit-if-changed .
-
-      # Consider passing '--fatal-infos' for slightly stricter analysis.
-      - name: Analyze project source
-        run: dart analyze
-
-      # Your project will need to have tests in test/ and a dependency on
-      # package:test for this step to succeed. Note that Flutter projects will
-      # want to change this to 'flutter test'.
-      - name: Run tests
-        run: flutter test
+      - name: run tests
+        uses: geowatson/flutter-latest@1.0.0
+        with:
+          args: test
