--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -13,17 +13,12 @@ on:
 
 jobs:
   build:
-    name: run testing
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
+      - uses: dart-lang/setup-dart@v1
 
-      - name: install dependencies
-        uses: geowatson/flutter-latest@1.0.0
-        with:
-          args: pub get
-
-      - name: run tests
-        uses: geowatson/flutter-latest@1.0.0
-        with:
-          args: test
+      - run: dart pub get
+      - run: dart format --output=none --set-exit-if-changed .
+      - run: dart analyze
+      - run: dart test
