--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -22,5 +22,7 @@ jobs:
           flutter-version: '3.7.11'
           channel: 'stable'
 
+      - run: flutter channel master
+      - run: flutter upgrade
       - run: flutter pub get
       - run: flutter test
