--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -26,6 +26,7 @@ jobs:
       - run: flutter upgrade
       - run: flutter pub get
       - run: flutter test
+      - run: flutter build appbundle -v
       - uses: sparkfabrik/android-build-action@v1.5.0
         with :
          project-path: android
