--- a/.github/workflows/flutter_cd.yaml
+++ b/.github/workflows/flutter_cd.yaml
@@ -26,3 +26,8 @@ jobs:
       - run: flutter upgrade
       - run: flutter pub get
       - run: flutter test
+      - run: flutter build appbundle -v
+      - uses: sparkfabrik/android-build-action@v1.5.0
+        with :
+         project-path: android
+         output-path: ABCJobs.apk
