Cambio de la rama main a release en CD

--- a/.github/workflows/flutter_cd.yaml
+++ b/.github/workflows/flutter_cd.yaml
@@ -7,9 +7,9 @@ name: flutter_cd
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "release" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "release" ]
 
 jobs:
   build:
