Se termina la prueba de E2E integrando registro y login

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: abcjobs_movil
-description: A new Flutter project.
+description: ABCJobs app for candidates.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -46,7 +46,6 @@ dependencies:
 dev_dependencies:
   integration_test:
     sdk: flutter
-
   flutter_test:
     sdk: flutter
 
