--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/background.png
+    - assets/images/backgroundinterno.png
     - assets/images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
